# huesy-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
engine/: CMakeLists.txt
engine/include/: defines.h
engine/include/engine/: application.h  defines.h  engine.h  entry.h  game.h  logging.h  memory.h  platform.h  plugin.h  renderer.h  window.h
engine/include/engine/memory/: system.h  types.h
engine/include/engine/platform/: entry.h
engine/src/: application.c  engine.c  game.c  logging.c  memory.c  plugin.c
engine/src/platform/: platform.c  platform_sdl3.c
engine/src/plugins/: memory_plugin.c
engine/src/renderer/: renderer.c  renderer_sdl3.c
game/: CMakeLists.txt
game/src/: game.c
shared/: CMakeLists.txt
shared/include/: defines.h
shared/src/: shared.c
